--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@types/react": "18.2.21",
         "@types/react-dom": "18.2.7",
         "@typescript-eslint/eslint-plugin": "^6.4.1",
+        "@uidotdev/usehooks": "^2.2.0",
         "autoprefixer": "10.4.15",
         "eslint": "8.48.0",
         "eslint-config-next": "13.4.19",
@@ -28,6 +29,7 @@
         "react-hook-form": "^7.45.4",
         "tailwindcss": "3.3.3",
         "typescript": "5.2.2",
+        "usehooks-ts": "^2.9.1",
         "zod": "^3.22.2"
     }
 }
