--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
         "@types/react": "18.2.21",
         "@types/react-dom": "18.2.7",
         "@typescript-eslint/eslint-plugin": "^6.4.1",
-        "@uidotdev/usehooks": "^2.2.0",
         "autoprefixer": "10.4.15",
         "eslint": "8.48.0",
         "eslint-config-next": "13.4.19",
@@ -27,6 +26,7 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-hook-form": "^7.45.4",
+        "react-intersection-observer": "^9.5.2",
         "tailwindcss": "3.3.3",
         "typescript": "5.2.2",
         "usehooks-ts": "^2.9.1",
